--- a/Landing Page.html
+++ b/Landing Page.html
@@ -10,6 +10,11 @@
             text-align: center;
             margin-top: 100px;
         }
+        #logo {
+            display: block;
+            margin: 0 auto 20px;
+            width: 150px;
+        }
         #welcome-box {
             margin: 20px auto;
         }
@@ -18,15 +23,15 @@
             font-size: 16px;
         }
     </style>
+    <img id="logo" src="Skillswap-Photoroom.png" alt="SwapSkill Logo" style="width: 250px;">
 </head>
 <body>
-    <h1>Welcome to SwapSkill</h1>
+    <h1 style="background-color: purple; color: rgb(248, 248, 248); padding: 20px;">Welcome to SwapSkill</h1>
     <div id="welcome-box">
         <input type="text" id="name-input" placeholder="Enter your name" />
         <button onclick="greetUser()">Submit</button>
     </div>
     <h2 id="greeting-message" style="display: none;"></h2>
-
     <script>
         function greetUser() {
             const nameInput = document.getElementById('name-input');
