--- a/Landing Page.html
+++ b/Landing Page.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 100px;
+            background-color: #e6e6fa;
         }
         #logo {
             display: block;
@@ -26,7 +27,7 @@
     <img id="logo" src="Skillswap-Photoroom.png" alt="SwapSkill Logo" style="width: 250px;">
 </head>
 <body>
-    <h1 style="background-color: purple; color: rgb(248, 248, 248); padding: 20px;">Welcome to SwapSkill</h1>
+    <h1 style="background-color: rgb(158, 60, 158); color: rgb(248, 248, 248); padding: 20px;">Welcome to SkillSwap</h1>
     <div id="welcome-box">
         <input type="text" id="name-input" placeholder="Enter your name" />
         <button onclick="greetUser()">Submit</button>
@@ -39,7 +40,7 @@
             if (name) {
                 document.getElementById('welcome-box').style.display = 'none';
                 const greetingMessage = document.getElementById('greeting-message');
-                greetingMessage.textContent = `Hi ${name}, enjoy our community and have a great day!`;
+                greetingMessage.textContent = `Hi ${name}, Enjoy being part of our community and Have an awesome day!`;
                 greetingMessage.style.display = 'block';
             }
         }
