--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
     <nav>
       <a href="#">Overview</a>
-      <a href="#">Prices</a>
+      <a href="#">Pricing</a>
       <a href="#">Community</a>
       <a href="#">Help</a>
       <a href="#" class="upgrade-btn">Upgrade</a>
@@ -22,7 +22,7 @@
   
   <main>
     <div class="hero-content">
-      <h1>Skill Exchange Network Platform</h1>
+      <h1>Skills Exchange Network Platform</h1>
       <p>A community where you teach skills you have in exchange for learning skills you want.</p>
       <a href="#" class="learn-more-btn">Learn More</a>
     </div>
