--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
     
       <div class="go-to-landing">
-        <a href="Landing Page.html" class="landing-btn">Go to Welcome Page</a>
+        <a href="Landing Page2.html" class="landing-btn">Go to Welcome Page</a>
       </div>
     <nav>
       <a href="#">Overview</a>
