--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
   <header>
     <div class="logo">
         <img src="Skillswap-Photoroom.png" alt="Your Logo" width="150" height="150">
-      </div>
-    
-      <div class="go-to-landing">
-        <a href="Landing Page2.html" class="landing-btn">Go to Welcome Page</a>
-      </div>
-    <nav>
-      <a href="#">Overview</a>
-      <a href="#">Pricing</a>
-      <a href="#">Community</a>
-      <a href="#">Help</a>
-      <a href="#" class="upgrade-btn">Upgrade</a>
-    </nav>
+    </div>
+    <div class="nav-container">
+        <nav>
+            <a href="#">Pricing</a>
+            <a href="#">Community</a>
+            <a href="#">Help</a>
+            <a href="#" class="upgrade-btn">Upgrade</a>
+        </nav>
+        <div class="go-to-landing">
+            <a href="Landing Page2.html" class="landing-btn">Go to Welcome Page</a>
+        </div>
+    </div>
   </header>
-  
   <main>
     <div class="hero-content">
       <h1>Skills Exchange Network Platform</h1>
@@ -52,3 +51,4 @@
 
   <script src="script.js"></script>
 </body>
+</html>
