--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="nav-container">
         <nav>
-            <a href="#">Pricing</a>
+            <a href="pricing.html">Pricing</a>
             <a href="#">Community</a>
             <a href="#">Help</a>
             <a href="#" class="upgrade-btn">Upgrade</a>
