--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <div class="sign-in-card">    
       <h2>Sign In</h2>
-      <form id="loginForm">
+      <form id="loginForm" action="/login" method="POST">
         <input type="email" placeholder="Your email" required>
         <input type="password" placeholder="Your password" required>
         <div class="checkbox-container">
