--- a/skillswappers.html
+++ b/skillswappers.html
@@ -9,13 +9,48 @@
   <div class="container">
     <h1>SkillSwappers</h1>
     <p class="intro">
-      Swap Skillers is a peer-to-peer web platform where users can exchange skills directly—no money involved. 
-      Whether you're offering guitar lessons in exchange for coding help or language practice for graphic design tips, 
+      Swap Skillers is a peer-to-peer web platform where users can exchange skills directly—no money involved.
+      Whether you're offering guitar lessons in exchange for coding help or language practice for graphic design tips,
       Swap Skillers makes it easy to connect, match, and grow together through skill sharing.
     </p>
-    <div class="card-grid" id="profile-cards">
-      <!-- Profile cards will be loaded here via server -->
-    </div>
-  </div>
-</body>
+
+    <div class="card-grid">
+      <!-- Profile cards will be injected here by server -->
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="Study Buddy">
+        <h3>Study Buddy</h3>
+        <p>Description</p>
+        <button>Learn More</button>
+      </div>
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/women/12.jpg" alt="Fact Finder">
+        <h3>Fact Finder</h3>
+        <p>Description</p>
+        <button>Learn More</button>
+      </div>
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/men/13.jpg" alt="Data Decoder">
+        <h3>Data Decoder</h3>
+        <p>Description</p>
+        <button>Learn More</button>
+      </div>
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/women/14.jpg" alt="Mozart Project">
+        <h3>Mozart Project</h3>
+        <p>Description</p>
+        <button>Learn More</button>
+      </div>
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/women/15.jpg" alt="Home Chef Hero">
+        <h3>Home Chef Hero</h3>
+        <p>Description</p>
+        <button>Learn More</button>
+      </div>
+      </div>
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/men/16.jpg" alt="Goal Getter">
+        <h3>Goal Getter</h3>
+        <p>Description</p>
+        <button>Learn More</button>
+      </div>
 </html>
