--- a/skillswappers.html
+++ b/skillswappers.html
@@ -15,7 +15,6 @@
     </p>
 
     <div class="card-grid">
-      <!-- Profile cards will be injected here by server -->
       <div class="card">
         <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="Study Buddy">
         <h3>Study Buddy</h3>
@@ -46,11 +45,10 @@
         <p>Description</p>
         <button>Learn More</button>
       </div>
-      </div>
-      <div class="card">
-        <img src="https://randomuser.me/api/portraits/men/16.jpg" alt="Goal Getter">
-        <h3>Goal Getter</h3>
-        <p>Description</p>
-        <button>Learn More</button>
-      </div>
+      
+
+      <!-- User-generated card will be appended here -->
+    </div>
+  </div>
+</body>
 </html>
