--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <form id="loginForm" action="/login" method="POST">
         <input type="email" name="email" placeholder="Email" required />
         <input type="password" name="password" placeholder="Password" required />
-        <button type="submit">Sign In</button>
+        <button type="submit" aria-label="Sign in to your account">Sign In</button>
       </form>      
       <a href="#" class="twitter-btn">Login via Twitter</a>
       <div class="register-container">
