--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     
     <div class="sign-in-card">    
       <h2>Sign In</h2>
-      <form id="loginForm" action="/login" method="POST">
+      <form action="/login" method="POST">
         <input type="email" name="email" placeholder="Email" required />
         <input type="password" name="password" placeholder="Password" required />
         <button type="submit" class="sign-in-btn">Sign In</button>
