--- a/public/skillswappers.html
+++ b/public/skillswappers.html
@@ -9,44 +9,43 @@
   <div class="container">
     <h1>SkillSwappers</h1>
     <p class="intro">
-      Swap Skillers is a peer-to-peer web platform where users can exchange skills directly—no money involved.
+      SkillSwappers is a peer-to-peer web platform where users can exchange skills directly—no money involved.
       Whether you're offering guitar lessons in exchange for coding help or language practice for graphic design tips,
-      Swap Skillers makes it easy to connect, match, and grow together through skill sharing.
+      SkillSwappers makes it easy to connect, match, and grow together through skill sharing.
     </p>
 
     <div class="card-grid">
       <div class="card">
-        <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="Study Buddy">
+        <img src="images/person1.jpg" alt="Profile 1">
         <h3>Study Buddy</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="https://randomuser.me/api/portraits/women/12.jpg" alt="Fact Finder">
+        <img src="images/person2.jpg" alt="Profile 2">
         <h3>Fact Finder</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="https://randomuser.me/api/portraits/men/13.jpg" alt="Data Decoder">
+        <img src="images/person3.jpg" alt="Profile 3">
         <h3>Data Decoder</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="https://randomuser.me/api/portraits/women/14.jpg" alt="Mozart Project">
+        <img src="images/person4.jpg" alt="Profile 4">
         <h3>Mozart Project</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="https://randomuser.me/api/portraits/women/15.jpg" alt="Home Chef Hero">
+        <img src="images/person5.jpg" alt="Profile 5">
         <h3>Home Chef Hero</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       
-
       <!-- User-generated card will be appended here -->
     </div>
   </div>
