Fix image paths and complete skillswappers layout

--- a/public/skillswappers.html
+++ b/public/skillswappers.html
@@ -16,31 +16,31 @@
 
     <div class="card-grid">
       <div class="card">
-        <img src="images/person1.jpg" alt="Profile 1">
+        <img src="images/person1.jpg" alt="Study Buddy">
         <h3>Study Buddy</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="images/person2.jpg" alt="Profile 2">
+        <img src="images/person2.jpg" alt="Fact Finder">
         <h3>Fact Finder</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="images/person3.jpg" alt="Profile 3">
+        <img src="images/person3.jpg" alt="Data Decoder">
         <h3>Data Decoder</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="images/person4.jpg" alt="Profile 4">
+        <img src="images/person4.jpg" alt="Mozart Project">
         <h3>Mozart Project</h3>
         <p>Description</p>
         <button>Learn More</button>
       </div>
       <div class="card">
-        <img src="images/person5.jpg" alt="Profile 5">
+        <img src="images/person5.jpg" alt="Home Chef Hero">
         <h3>Home Chef Hero</h3>
         <p>Description</p>
         <button>Learn More</button>
