--- a/public/Landing Page2.html
+++ b/public/Landing Page2.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <img src="./Skillswap-Photoroom.png" alt="Logo" class="header-logo">
-            <h1 class="slide-in">WELCOME TO MY PAGE</h1>
+            <h1 class="slide-in">WELCOME TO SkillSwap</h1>
         </div>
     </header>
     <button id="button-enter" type="button" onclick="window.location.href='index.html'">ENTER</button>
