--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,7 @@
     </div>
     <div class="nav-container">
         <nav>
-            <a href="pricing.html">Pricing</a>
-            <a href="#">Community</a>
-            <a href="#">Help</a>
-            <a href="#" class="upgrade-btn">Upgrade</a>
+            <a href="pricing.html" class="pricing-btn">Pricing</a>
         </nav>
         <div class="go-to-landing">
             <a href="Landing Page2.html" class="landing-btn">Go to Welcome Page</a>
@@ -36,7 +33,7 @@
         <input type="password" name="password" placeholder="Password" required />
         <button type="submit" class="sign-in-btn">Sign In</button>
       </form>      
-      <a href="#" class="twitter-btn">Login via Twitter</a>
+      <a href="https://twitter.com" class="twitter-btn" target="_blank" rel="noopener noreferrer">Login via Twitter</a>
       <div class="register-container">
         <span>Do you have an Account?</span>
         <a href="#" class="register-link">Register</a>
