Thirty fifth COmmit

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <a href="https://twitter.com" class="twitter-btn" target="_blank" rel="noopener noreferrer">Login via Twitter</a>
       <div class="register-container">
         <span>Do you have an Account?</span>
-        <a href="#" class="register-link">Register</a>
+        <a href="register.html" class="register-link">Register</a>
       </div>
     </div>
   </main>
