--- a/public/Landing Page2.html
+++ b/public/Landing Page2.html
@@ -16,7 +16,7 @@
     <button id="button-enter" type="button" onclick="window.location.href='index.html'">ENTER</button>
     <script src="script2.js"></script>
     <div class="video-container">
-        <video autoplay muted loop>
+        <video autoplay muted>
             <source src="./coding.mp4" type="video/mp4">
         </video>
     </div>
