--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <a href="pricing.html" class="pricing-btn">Pricing</a>
         </nav>
         <div class="go-to-landing">
-            <a href="Landing Page2.html" class="landing-btn">Go to Welcome Page</a>
+            <a href="Landing Page2.html" class="landing-btn">Welcome Page</a>
         </div>
     </div>
   </header>
