--- a/public/welcome.html
+++ b/public/welcome.html
@@ -9,7 +9,7 @@
   <div class="container">
     <h1>Welcome to SwapSkillers</h1>
     <div class="intro-flex">
-      <img src="Welcome.png" alt="Welcome" class="welcome-image">
+      <img src="Skillswap-Photoroom.png" alt="SkillSwap Logo" class="welcome-logo">
       <form class="user-info-form" action="/profile" method="POST">
         <h2>Complete Your Profile</h2>
         <label for="name">Name:</label>
